--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File initial commit -->
+  <!-- Template Main CSS File torrexx-branch commit -->
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
