--- a/index.html
+++ b/index.html
@@ -335,19 +335,19 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line" style="color: #ffbb2c;"></i>
+            <i class="ri-braces-line"style="color: #ffbb2c;"></i>
             <h3>Web Design</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+            <i class="ri-code-s-slash-line" style="color: #5578ff;"></i>
             <h3>Programming & Dev</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
+            <i class="ri-brush-fill" style="color: #e80368;"></i>
             <h3>Graphic Design</h3>
           </div>
         </div>
@@ -359,19 +359,19 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box" hidden>
-            <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
+            <i class="ri-music-line" style="color: #11dbcf;"></i>
             <h3>Midela Teren</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #47aeff;"></i>
+            <i class="ri-music-line" style="color: #47aeff;"></i>
             <h3>Music & Arts</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+            <i class="ri-basketball-line" style="color: #ffa76e;"></i>
             <h3>Sports</h3>
           </div>
         </div>
