update the testimonial section

--- a/index.html
+++ b/index.html
@@ -400,12 +400,11 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                Praise, Sir! I am so happy with this outcome, sir! I am very please, and so is my dad. I will recommend you, sir.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+              <img src="assets/img/testimonials/testimonial.png" class="testimonial-img" alt="">
+              <h3>Kenneth Faelnar Amparo</h3>
             </div>
           </div><!-- End testimonial item -->
 
@@ -413,12 +412,12 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Thank you very much sir. Same you sir, thank you very much. Doing business with you is always a great experience.
+                  I'll be sure to recommend you
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
+              <img src="assets/img/testimonials/testimonial.png" class="testimonial-img" alt="">
+              <h3>April Jean Ajoc</h3>
             </div>
           </div><!-- End testimonial item -->
 
@@ -426,12 +425,12 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Thank you so much for this work, Sir. And to you for accepting my request. Thank you very much Sir. Today is September 21, 2023, hehe thank you very much sir.
+                  I'll always remember this date.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
+              <img src="assets/img/testimonials/testimonial.png" class="testimonial-img" alt="">
+              <h3>Kenneth Faelnar Amparo</h3>
             </div>
           </div><!-- End testimonial item -->
 
@@ -439,12 +438,12 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                 Nice work, wasn't expecting it to be this good. I'll increase the payment, from 500 to 1k because the work is well done. Sure thing, I'll recommend you.
+                 Thank you very much Sir
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <img src="assets/img/testimonials/testimonial.png" class="testimonial-img" alt="">
+              <h3>Catelyn Catanghal</h3>
             </div>
           </div><!-- End testimonial item -->
 
@@ -452,12 +451,11 @@
             <div class="testimonial-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Thank you for this edit, I love it because it's not boring like most promotional video done by the university
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
+              <img src="assets/img/testimonials/testimonial.png" class="testimonial-img" alt="">
+              <h3>Nestnie Honrada</h3>
             </div>
           </div><!-- End testimonial item -->
 
