--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Developer & Visual Artist</h3>
           <p class="fst-italic">
-            Hey there! Excited to make new friends and join forces on projects with you! Let's connect, share stories, explore common interests, and bring some spontaneous fun to the table. Life's more vibrant together, and I'm ready with a big smile. Can't wait to make memories and crush it on your projects! 
+            Hey there! I'm Pablito P Torrecampo Jr. and I'm excited to make new friends and join forces on projects with you! Let's connect, share stories, explore common interests, and bring some spontaneous fun to the table. Life's more vibrant together, and I'm ready with a big smile. Can't wait to make memories and crush it on your projects! 
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -482,58 +482,67 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
-          <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-            <p>
-            <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
-            </ul>
-            </p>
-          </div>
-
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-          </div>
-          <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <h4>Bachelo of Science in Information Technology - Programmming</h4>
+            <h5>2018 - 20222</h5>
+            <p><em><a href="https://southernleytestateu.edu.ph/index.php/en/">Southern Leyte State University-Main Campus</a></em></p>
+            <p>Throughout my college journey, I enthusiastically immersed myself in programming, refining my communication and organizational skills. 
+              This period fueled my interest for diverse creative pursuits, including programming, video editing, graphic design, and visual arts.
+            </p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Web Developer</h4>
+            <h5>November 2023 - Present</h5>
+            <p><em><a href="https://web.facebook.com/FortyDegreesCelsiusInc/">Forty Degrees Inc</a></em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Learned more project organizational skills and testing practices</li>
+              <li>I learned to code and trace in cake PHP, I also learned to trace large files</li>
+              <li>Having had the experience working in project that is on going</li>
+              <li>Experienced working and navigating database that has over 200+ tables</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Freelance Graphic Designer</h4>
+            <h5>2022 - present</h5>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>I design, conceptualize and layout tarpualin.</li>
+              <li>I also design ID slings, banners and I also manipulate photo</li>
+              <li>I also edit videos for promotions, personal project or business. This includes but not limeted to facebook stories, reels, tiktok contents and shorts</li>
+              <li>I also create design for logo</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Assistant Programmer</h4>
+            <h5>July 2022 - October 2023</h5>
+            <p>
+            <ul>
+              <li>I was part of the team that developed the university's <a href="https://procurement.southernleytestateu.edu.ph/login">procurement management information system.</a></li>
+              <li>Design and maintained the database of the system, as well as it's code base</li>
+              <li>Presented new features at the time to the PMIS stakeholders</li>
+              <li>Enhanced the system, maintained and fixed errors</li>
+              <li>Learned to code in Laravel</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Part-time Instructor</h4>
+            <h5>August 2022 - May 2023</h5>
+            <p>
+            <ul>
+              <li>I was able to teach students programming</li>
+              <li>Worked with students in understanding various programming concepts, approach and implementations</li>
+              <li>Taught students basic database management concepts</li>
+              <li>Developed my communication skills further and work with a team</li>
             </ul>
             </p>
           </div>
