include slsu page link in resume page

--- a/index.html
+++ b/index.html
@@ -523,6 +523,7 @@
           <div class="resume-item">
             <h4>Assistant Programmer</h4>
             <h5>July 2022 - October 2023</h5>
+            <p><em><a href="https://southernleytestateu.edu.ph/index.php/en/">Southern Leyte State University-Main Campus</a></em></p>
             <p>
             <ul>
               <li>I was part of the team that developed the university's <a href="https://procurement.southernleytestateu.edu.ph/login">procurement management information system.</a></li>
@@ -537,6 +538,7 @@
           <div class="resume-item">
             <h4>Part-time Instructor</h4>
             <h5>August 2022 - May 2023</h5>
+            <p><em><a href="https://southernleytestateu.edu.ph/index.php/en/">Southern Leyte State University-Main Campus</a></em></p>
             <p>
             <ul>
               <li>I was able to teach students programming</li>
