--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
           </div>
 
           <div class="progress">
+            <span class="skill">My SQL <i class="val">85%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+          <div class="progress">
             <span class="skill">PHP <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -566,49 +573,51 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="icon"><i class='bx bx-code-curly'></i></div>
+            <h4><a href="">Web Development / Programming</a></h4>
+            <p>
+              I'm your go-to person for injecting enthusiasm into your personal project! Let's add that dynamic programmer's touch and make your project shine!
+            </p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="icon"><i class='bx bxs-photo-album'></i></div>
+            <h4><a href="">Graphic Design</a></h4>
+            <p>Whether it's crafting a stunning logo or diving into intricate photo manipulation, I've got your graphic design needs covered. Let's bring your ideas to life with creativity and flair!</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <div class="icon"><i class='bx bx-video'></i></div>
+            <h4><a href="">Video Editing</a></h4>
+            <p>Level up your content game! Whether it's TikTok, YouTube vlogs, or school projects, I've got the video editing skills to make your content pop. Let's turn your ideas into engaging visual stories that captivate and impress!</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <div class="icon"><i class='bx bxs-file-doc'></i></div>
+            <h4><a href="">Document Management</a></h4>
+            <p>Need a document guru? Look no further! Whether it's managing your files, crafting a stellar presentation, or encoding documents, I've got you covered. Let's streamline and organize your tasks effortlessly! 📄💼🚀</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <div class="icon"><i class='bx bx-edit'></i></div>
+            <h4><a href="">Colored & Charcoal Portraits</a></h4>
+            <p>Capture the essence of your cherished moments with my portrait expertise! I'm here to provide the perfect touch, turning your memories into timeless, beautiful portraits. Let's create something special together!</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <div class="icon"><i class='bx bxs-file-doc'></i></div>
+            <h4><a href="">And many more</a></h4>
+            <p>If you need something that's not listed here, just reach out! Maybe I can help you that.</p>
           </div>
         </div>
 
