Updated service page -2

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
           <div class="icon-box">
             <div class="icon"><i class='bx bxs-file-doc'></i></div>
             <h4><a href="">Document Management</a></h4>
-            <p>Need a document guru? Look no further! Whether it's managing your files, crafting a stellar presentation, or encoding documents, I've got you covered. Let's streamline and organize your tasks effortlessly! 📄💼🚀</p>
+            <p>Need a document guru? Look no further! Whether it's managing your files, crafting a stellar presentation, or encoding documents, I've got you covered. Let's streamline and organize your tasks effortlessly!</p>
           </div>
         </div>
 
@@ -617,7 +617,7 @@
           <div class="icon-box">
             <div class="icon"><i class='bx bxs-file-doc'></i></div>
             <h4><a href="">And many more</a></h4>
-            <p>If you need something that's not listed here, just reach out! Maybe I can help you that.</p>
+            <p>Got something unique in mind? Don't hesitate to reach out! I'm all about making things happen, and if it's not on the list, let's explore how I can bring your ideas to life. Your project, your vision let's make it happen together!</p>
           </div>
         </div>
 
