--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     </div>
   </header><!-- End Header -->
-
+<!-- comment -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="hero d-flex align-items-center section-bg">
     <div class="container">
