--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>About Us</h2>
-          <p>Learn More <span>About Us</span></p>
+          <h2>About Me</h2>
+          <p>Learn More <span>About Me</span></p>
         </div>
 
         <div class="row gy-4">
@@ -153,46 +153,51 @@
 
     <!-- ======= Why Us Section ======= -->
     <section id="why-us" class="why-us section-bg">
+      <div class="section-header">
+        <h2>Services</h2>
+        <p>Area of <span>Expertise</span></p>
+        <div class="row justify-content-center">
+          <div class="divider"></div>
+        </div>
+      </div>
       <div class="container" data-aos="fade-up">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="why-box">
-              <h3>Why Choose Yummy?</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
-              </p>
-              <div class="text-center">
-                <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
-              </div>
-            </div>
-          </div><!-- End Why Box -->
-
-          <div class="col-lg-8 d-flex align-items-center">
+        <div class="row mb-4 justify-content-center">
+          <p class="text-center custom-header">
+            Looking for a dynamic professional to enhance your project? I specialize in <span>web development</span>, <span>graphics design</span>, <span>video editing</span>, and <span>visual arts</span>. With a passion for artistry and a knack for innovation, I'm not just a service provider but a collaborative partner. Whether it's coding, crafting designs, or video editing, I bring creativity and expertise to every task. Open to remote collaborations, I am ready to contribute to the success of your projects. Let's turn ideas into reality together!
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 d-flex align-items-center">
             <div class="row gy-4">
 
-              <div class="col-xl-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="col-xl-3" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-clipboard-data"></i>
-                  <h4>Corporis voluptates officia eiusmod</h4>
+                  <h4>Web Development</h4>
                   <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
                 </div>
               </div><!-- End Icon Box -->
 
-              <div class="col-xl-4" data-aos="fade-up" data-aos-delay="300">
+              <div class="col-xl-3" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-gem"></i>
-                  <h4>Ullamco laboris ladore pan</h4>
+                  <h4>Graphics Design</h4>
                   <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
                 </div>
               </div><!-- End Icon Box -->
 
-              <div class="col-xl-4" data-aos="fade-up" data-aos-delay="400">
+              <div class="col-xl-3" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                   <i class="bi bi-inboxes"></i>
-                  <h4>Labore consequatur incidid dolore</h4>
+                  <h4>Video Editing</h4>
+                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                </div>
+              </div><!-- End Icon Box -->
+
+              <div class="col-xl-3" data-aos="fade-up" data-aos-delay="400">
+                <div class="icon-box d-flex flex-column justify-content-center align-items-center">
+                  <i class="bi bi-inboxes"></i>
+                  <h4>Visual Arts</h4>
                   <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
                 </div>
               </div><!-- End Icon Box -->
