--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#menu">Menu</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -212,7 +212,7 @@
     </section><!-- End Why Us Section -->
 
     <!-- ======= Stats Counter Section ======= -->
-    <section id="stats-counter" class="stats-counter">
+    <section id="stats-counter" class="stats-counter" hidden>
       <div class="container" data-aos="zoom-out">
 
         <div class="row gy-4">
@@ -251,12 +251,12 @@
     </section><!-- End Stats Counter Section -->
 
     <!-- ======= Menu Section ======= -->
-    <section id="menu" class="menu">
+    <section id="projects" class="menu">
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Menu</h2>
-          <p>Check Our <span>Yummy Menu</span></p>
+          <h2>My Projects</h2>
+          <p>Check My <span>Projects</span></p>
         </div>
 
         <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="200">
