--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
           <h1 data-aos="fade-up">Hi I'm Torrexx</h1>
           <p data-aos="fade-up" data-aos-delay="100">Web Developer | Graphics Designer | Video Editor | Visual Artist</p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#book-a-table" class="btn-book-a-table">Book a Table</a>
+            <a href="#" class="btn-book-a-table">Request for Resume</a>
+            <!-- <a href="#book-a-table" class="btn-book-a-table">Book a Table</a> -->
             <!-- <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
           </div>
         </div>
