update on project section

--- a/index.html
+++ b/index.html
@@ -300,42 +300,43 @@
             <div class="row gy-5 col-12 project">
 
               <div class="col-lg-4 menu-item">
-                <h4>Sogod Travels</h4>
-                <p class="ingredients">
-                  I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
-                </p>
-                <div class="side-by-side">
-                  <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                <div class="project-box">
+                  <h4>Sogod Travels</h4>
+                  <p class="ingredients">
+                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                  </p>
+                  <div class="side-by-side">
+                    <a href="#" class="project-img"><i class="bi bi-card-image"></i></a>
+                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-                <p class="price">
-                  $5.95
-                </p>
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <h4>Sogod Travels</h4>
-                <p class="ingredients">
-                  I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
-                </p>
-                <div class="side-by-side">
-                  <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                <div class="project-box">
+                  <h4>Sogod Travels</h4>
+                  <p class="ingredients">
+                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                  </p>
+                  <div class="side-by-side">
+                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  </div>
                 </div>
-                <p class="price">
-                  $5.95
-                </p>
               </div><!-- Menu Item -->
-              
+
               <div class="col-lg-4 menu-item">
-                <h4>Sogod Travels</h4>
-                <p class="ingredients">
-                  I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
-                </p>
-                <div class="side-by-side">
-                  <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                <div class="project-box">
+                  <h4>Sogod Travels</h4>
+                  <p class="ingredients">
+                    I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
+                  </p>
+                  <div class="side-by-side">
+                    <a href="https://sogodtravels.website/" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  </div>
+                  <p class="price">
+                    $5.95
+                  </p>
                 </div>
-                <p class="price">
-                  $5.95
-                </p>
               </div><!-- Menu Item -->
 
             </div>
