uploaded some more project

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                     I had the privilege of directing and editing a unique project during the Civil Service Week of Celebration at SLSU. This project, titled "Awit ng Serbisyo Sibil," took the form of a captivating music video that showcased the spirit and enthusiasm of the event. 
                   </p>
                   <div class="side-by-side">
-                    <a href="  https://youtu.be/dt_KI1M7pqw" class="glightbox project-img"><i class="bi bi-youtube"></i></i></a>
+                    <a href="https://youtu.be/dt_KI1M7pqw" class="glightbox project-img"><i class="bi bi-youtube"></i></i></a>
                   </div>
                 </div>
               </div><!-- 3rd column -->
@@ -659,73 +659,68 @@
               <h3>Visual Arts</h3>
             </div>
 
-            <div class="row gy-5">
+            <div class="row col-12 project">
+              
+              <div class="col-lg-4 menu-item">
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001A.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001A.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001E.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001E.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001H.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001H.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001K.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001K.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001N.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001N.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001Q.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001Q.jpg" alt="Image 1"></a>
+                </div>
+              </div> <!-- end 1st column -->
+             
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-1.png" class="glightbox"><img src="assets/img/menu/menu-item-1.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Magnam Tiste</h4>
-                <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                  $5.95
-                </p>
-              </div><!-- Menu Item -->
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001F.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001F.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001B.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001B.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001I.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001I.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001L.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001L.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001O.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001O.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001R.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001R.jpg" alt="Image 1"></a>
+                </div>
+              </div> <!-- end 2nd column -->
 
               <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-2.png" class="glightbox"><img src="assets/img/menu/menu-item-2.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Aut Luia</h4>
-                <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                  $14.95
-                </p>
-              </div><!-- Menu Item -->
-
-              <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-3.png" class="glightbox"><img src="assets/img/menu/menu-item-3.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Est Eligendi</h4>
-                <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                  $8.95
-                </p>
-              </div><!-- Menu Item -->
-
-              <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-4.png" class="glightbox"><img src="assets/img/menu/menu-item-4.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                  $12.95
-                </p>
-              </div><!-- Menu Item -->
-
-              <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-5.png" class="glightbox"><img src="assets/img/menu/menu-item-5.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Eos Luibusdam</h4>
-                <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                  $12.95
-                </p>
-              </div><!-- Menu Item -->
-
-              <div class="col-lg-4 menu-item">
-                <a href="assets/img/menu/menu-item-6.png" class="glightbox"><img src="assets/img/menu/menu-item-6.png" class="menu-img img-fluid" alt=""></a>
-                <h4>Laboriosam Direva</h4>
-                <p class="ingredients">
-                  Lorem, deren, trataro, filede, nerada
-                </p>
-                <p class="price">
-                  $9.95
-                </p>
-              </div><!-- Menu Item -->
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001C.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001C.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001G.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001G.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001J.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001J.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001M.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001M.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="/assets/img/project/visual_arts/001P.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001P.jpg" alt="Image 1"></a>
+                </div>
+              </div> <!-- end 3rd column -->
 
             </div>
           </div><!-- End Dinner Menu Content -->
