--- a/index.html
+++ b/index.html
@@ -663,22 +663,22 @@
               
               <div class="col-lg-4 menu-item">
                 <div class="gallery-item">
-                  <a href="/assets/img/project/visual_arts/001A.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001A.jpg" alt="Image 1"></a>
+                  <a href="/assets/img/project/visual_arts/001A.jpg" class="glightbox"><img src="/assets/img/project/visual_arts/001A.jpg" alt="Image 1"></a>
                 </div>
                 <div class="gallery-item">
-                  <a href="/assets/img/project/visual_arts/001E.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001E.jpg" alt="Image 1"></a>
+                  <a href="/assets/img/project/visual_arts/001E.jpg" class="glightbox"><img src="/assets/img/project/visual_arts/001E.jpg" alt="Image 1"></a>
                 </div>
                 <div class="gallery-item">
-                  <a href="/assets/img/project/visual_arts/001H.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001H.jpg" alt="Image 1"></a>
+                  <a href="/assets/img/project/visual_arts/001H.jpg" class="glightbox"><img src="/assets/img/project/visual_arts/001H.jpg" alt="Image 1"></a>
                 </div>
                 <div class="gallery-item">
-                  <a href="/assets/img/project/visual_arts/001K.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001K.jpg" alt="Image 1"></a>
+                  <a href="/assets/img/project/visual_arts/001K.jpg" class="glightbox"><img src="/assets/img/project/visual_arts/001K.jpg" alt="Image 1"></a>
                 </div>
                 <div class="gallery-item">
-                  <a href="/assets/img/project/visual_arts/001N.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001N.jpg" alt="Image 1"></a>
+                  <a href="/assets/img/project/visual_arts/001N.jpg" class="glightbox"><img src="/assets/img/project/visual_arts/001N.jpg" alt="Image 1"></a>
                 </div>
                 <div class="gallery-item">
-                  <a href="/assets/img/project/visual_arts/001Q.jpg" class="glightbox project-img"><img src="/assets/img/project/visual_arts/001Q.jpg" alt="Image 1"></a>
+                  <a href="/assets/img/project/visual_arts/001Q.jpg" class="glightbox"><img src="/assets/img/project/visual_arts/001Q.jpg" alt="Image 1"></a>
                 </div>
               </div> <!-- end 1st column -->
              
