added more project

--- a/index.html
+++ b/index.html
@@ -680,6 +680,9 @@
                 <div class="gallery-item">
                   <a href="assets/img/project/visual_arts/001Q.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001Q.jpg" alt="Image 1"></a>
                 </div>
+                <div class="gallery-item">
+                  <a href="assets/img/project/visual_arts/001T.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001T.jpg" alt="Image 1"></a>
+                </div>
               </div> <!-- end 1st column -->
              
 
@@ -702,6 +705,9 @@
                 <div class="gallery-item">
                   <a href="assets/img/project/visual_arts/001R.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001R.jpg" alt="Image 1"></a>
                 </div>
+                <div class="gallery-item">
+                  <a href="assets/img/project/visual_arts/001U.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001U.jpg" alt="Image 1"></a>
+                </div>
               </div> <!-- end 2nd column -->
 
               <div class="col-lg-4 menu-item">
@@ -719,6 +725,12 @@
                 </div>
                 <div class="gallery-item">
                   <a href="assets/img/project/visual_arts/001P.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001P.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="assets/img/project/visual_arts/001S.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001S.jpg" alt="Image 1"></a>
+                </div>
+                <div class="gallery-item">
+                  <a href="assets/img/project/visual_arts/001V.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001V.jpg" alt="Image 1"></a>
                 </div>
               </div> <!-- end 3rd column -->
 
