--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
               <li><a data-bs-toggle="tab" data-bs-target="#project-visual" href="#projects">Visual Arts</a></li>
             </ul>
           </li>
-          <li><a href="#events">Events</a></li>
-          <li><a href="#chefs">Chefs</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          
-          <li><a href="#contact">Contact</a></li>
+          <li hidden><a href="#events">Events</a></li>
+          <li hidden><a href="#chefs">Chefs</a></li>
+          <li hidden><a href="#gallery">Gallery</a></li>
+          <li hidden><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -861,7 +860,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Events Section ======= -->
-    <section id="events" class="events section-bg">
+    <section id="events" class="events section-bg" hidden>
       <div class="container-fluid" data-aos="fade-up">
 
         <div class="section-header">
@@ -904,7 +903,7 @@
     </section><!-- End Events Section -->
 
     <!-- ======= Chefs Section ======= -->
-    <section id="chefs" class="chefs">
+    <section id="chefs" class="chefs" hidden>
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -977,7 +976,7 @@
     </section><!-- End Chefs Section -->
 
     <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table">
+    <section id="book-a-table" class="book-a-table" hidden>
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -1036,7 +1035,7 @@
     </section><!-- End Book A Table Section -->
 
     <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery section-bg">
+    <section id="gallery" class="gallery section-bg" hidden>
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -1062,7 +1061,7 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact" hidden>
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
