uploaded new project; changed some layouts; disabled picture in the gallery

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
               <div class="col-lg-4 menu-item">
                 <div class="project-box">
-                  <h4>Sogod Travels</h4>
+                  <h4>Sogod Travels <span class="new-icon">New</span></h4>
                   <p class="ingredients">
                     I was engaged to develop a website using WordPress for a thesis project. The primary objective of this website is to showcase the tourist spots of Sogod, providing detailed information about each location. The platform enables the display of tourist attractions, complete with their respective locations. Additionally, the administrative functionality allows the seamless addition of new tourist spots, including corresponding maps and additional information, contributing to an interactive and informative showcase of Sogod's attractions. 
                   </p>
@@ -486,12 +486,12 @@
 
               <div class="col-lg-4 menu-item">
                 <div class="project-box">
-                  <h4>Photo Layering</h4>
+                  <h4>Logo Design <span class="new-icon">New</span></h4>
                   <p class="ingredients">
-                    With this project, I had to take on a rushed freelance project where I was tasked to create a peacock using a random assortment of kitchen materials. I received the assignment at 10:00 PM and had to submit the finished project by 7:30 AM.  
+                    As part of a school project, I had the delightful opportunity to contribute my creative skills by designing a logo that beautifully encapsulated the client's deep affection for cats and her unwavering passion for cafes. Crafting a symbol that resonated with her love for felines and the cozy ambiance of coffee shops was both a rewarding and enjoyable experience. The logo not only became a visual representation of her unique blend of interests but also served as a testament to my dedication to delivering meaningful and personalized design solutions.  
                   </p>
                   <div class="side-by-side">
-                    <a href="assets/img/project/graphics_design/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                    <a href="assets/img/project/graphics_design/009A.png" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
                   </div>
                 </div>
 
@@ -524,6 +524,16 @@
               </div><!-- 1st column -->
 
               <div class="col-lg-4 menu-item">
+                <div class="project-box">
+                  <h4>Photo Layering</h4>
+                  <p class="ingredients">
+                    With this project, I had to take on a rushed freelance project where I was tasked to create a peacock using a random assortment of kitchen materials. I received the assignment at 10:00 PM and had to submit the finished project by 7:30 AM.  
+                  </p>
+                  <div class="side-by-side">
+                    <a href="assets/img/project/graphics_design/002A.jpg" class="glightbox project-img"><i class="bi bi-card-image"></i></a>
+                  </div>
+                </div>
+
                 <div class="project-box">
                   <h4>Lanyard Layout</h4>
                   <p class="ingredients">
@@ -1043,8 +1053,8 @@
           <p>Check <span>Our Gallery</span></p>
         </div>
 
-        <div class="gallery-slider swiper">
-          <div class="swiper-wrapper align-items-center">
+        <div class="gallery-slider swiper" >
+          <!-- <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/gallery-1.jpg"><img src="assets/img/gallery/gallery-1.jpg" class="img-fluid" alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/gallery-2.jpg"><img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/gallery-3.jpg"><img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt=""></a></div>
@@ -1053,7 +1063,7 @@
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/gallery-6.jpg"><img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/gallery-7.jpg"><img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt=""></a></div>
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/gallery/gallery-8.jpg"><img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt=""></a></div>
-          </div>
+          </div> -->
           <div class="swiper-pagination"></div>
         </div>
 
