--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#chefs">Chefs</a></li>
+          <li hidden><a href="#chefs">Chefs</a></li>
           <li><a href="#projects">Projects</a></li>
           <li hidden class="dropdown"><a href="#projects"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -110,18 +110,20 @@
           <h2>About Me</h2>
           <p>Learn More <span>About Me</span></p>
           <div class="row justify-content-center">
-            <div class="divider"></div>
+            <div class="col-sm-6">
+              <div class="divider"></div>
+            </div>
           </div>
         </div>
 
         <div class="row gy-4">
-          <div class="col-lg-7 position-relative about-img" style="background-image: url(assets/img/about.jpg) ;" data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-5 position-relative about-img"  data-aos="fade-up" data-aos-delay="150">
             <div class="call-us position-absolute">
-              <h4>Book a Table</h4>
-              <p>+1 5589 55488 55</p>
+              <h4>Request for Resume</h4>
+              <a href="#" class="btn-send-request"><i class="bi bi-send"></i>Send Request</a>
             </div>
           </div>
-          <div class="col-lg-5 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-7 d-flex align-items-end" data-aos="fade-up" data-aos-delay="300">
             <div class="content ps-0 ps-lg-5">
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -153,8 +155,10 @@
       <div class="section-header">
         <h2>Services</h2>
         <p>Area of <span>Expertise</span></p>
-        <div class="row justify-content-center">
-          <div class="divider"></div>
+        <div class="row justify-content-center section-bg">
+          <div class="col-sm-6">
+            <div class="divider"></div>
+          </div>
         </div>
       </div>
       <div class="container" data-aos="fade-up">
@@ -212,8 +216,14 @@
       </div>
     </section><!-- End Why Us Section -->
 
+    <div class="row justify-content-center section-bg" hidden>
+      <div class="col-sm-6">
+        <div class="divider"></div>
+      </div>
+    </div>
+
      <!-- ======= Chefs Section ======= -->
-     <section id="chefs" class="chefs section-bg">
+     <section id="chefs" class="chefs section-bg" hidden>
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
@@ -745,7 +755,10 @@
               
               <div class="col-lg-4 menu-item">
                 <div class="gallery-item">
-                  <a href="assets/img/project/visual_arts/001A.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001A.jpg" alt="Image 1"></a>
+                  <a href="assets/img/project/visual_arts/001A.jpg" class="glightbox project-img">
+                    <span class="new-label">New</span>
+                    <img src="assets/img/project/visual_arts/001A.jpg" alt="Image 1">
+                  </a>
                 </div>
                 <div class="gallery-item">
                   <a href="assets/img/project/visual_arts/001E.jpg" class="glightbox project-img"><img src="assets/img/project/visual_arts/001E.jpg" alt="Image 1"></a>
