fixed about image not showing on prod -1

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
 
         <div class="row gy-4">
-          <div class="col-lg-5 position-relative about-img"  data-aos="fade-up" data-aos-delay="150">
+          <div class="col-lg-5 position-relative about-img"  style="background-image: url('assets/img/about.png');" data-aos="fade-up" data-aos-delay="150">
             <div class="call-us position-absolute">
               <h4>Request for Resume</h4>
               <a href="#" class="btn-send-request"><i class="bi bi-send"></i>Send Request</a>
