--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li hidden><a href="#chefs">Chefs</a></li>
+          <li><a href="#terms-conditions">Terms & Conditions</a></li>
           <li><a href="#projects">Projects</a></li>
           <li hidden class="dropdown"><a href="#projects"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -65,13 +65,14 @@
               <li><a data-bs-toggle="tab" data-bs-target="#project-visual" href="#projects">Visual Arts</a></li>
             </ul>
           </li>
+          <li hidden><a href="#chefs">Chefs</a></li>
           <li hidden><a href="#events">Events</a></li>
           <li hidden><a href="#gallery">Gallery</a></li>
           <li hidden><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
-      <!-- <a class="btn-book-a-table" href="#book-a-table">Book a Table</a> -->
+      <!-- <a class="btn-book-a-table" href="#chefs">Terms & Conditions</a> -->
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
 
@@ -139,7 +140,7 @@
                 velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
               </p>
 
-              <div class="position-relative mt-4">
+              <div class="position-relative mt-4" >
                 <img src="assets/img/about-2.jpg" class="img-fluid" alt="">
                 <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
               </div>
@@ -216,19 +217,19 @@
       </div>
     </section><!-- End Why Us Section -->
 
-    <div class="row justify-content-center section-bg" hidden>
+    <div class="row justify-content-center section-bg">
       <div class="col-sm-6">
         <div class="divider"></div>
       </div>
     </div>
 
      <!-- ======= Chefs Section ======= -->
-     <section id="chefs" class="chefs section-bg" hidden>
+     <section id="terms-conditions" class="chefs section-bg" >
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Chefs</h2>
-          <p>Our <span>Proffesional</span> Chefs</p>
+          <h2>Terms & Conditions</h2>
+          <p>Imporant <span>Reminders</span></p>
         </div>
 
         <div class="row gy-4">
