--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <div class="section-header">
           <h2>Terms & Conditions</h2>
-          <p>Imporant <span>Reminders</span></p>
+          <p>Important Reminders <span>Before Hiring</span></p>
         </div>
 
         <div class="row gy-4">
@@ -477,6 +477,7 @@
                       <a href="assets/img/project/web_developer/002E.jpg" class="glightbox"></a>
                       <a href="assets/img/project/web_developer/002F.jpg" class="glightbox"></a>
                     </div>
+                    <a href="https://procurement.southernleytestateu.edu.ph/login" class="project-img" target="_blank"><i class="bi bi-link-45deg"></i></a>
                   </div>
                 </div>
 
